# bootcamp-eng-dados

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  objects.inv
aula-01/: README.md  kpi.py
config/: index.html
extract/: index.html
input-schemas/: index.html
load/: index.html
output-schemas/: index.html
search/: search_index.json
src/aula-01/: pyproject.toml
src/aula-01/aula_01/: README.md  kpi.py
src/projeto-01/: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pre-commit-config.yaml  pyproject.toml
src/projeto-01/app/: main.py
src/projeto-01/app/modules/: config.py  extract_data.py  load_data.py  schemas.py  transform_data.py  utils_log.py
src/projeto-01/docs/: config.md  extract.md  input-schemas.md  load.md  output-schemas.md  transform.md
src/projeto-01/sql/: create_table_benchmark.sql  create_table_weather_stations.sql
src/projeto-leitura-1bi/: pyproject.toml
transform/: index.html
