[tool.poetry]
name = "projeto-01"
version = "0.1.0"
description = ""
authors = ["Joao Pedro <jpfdsilva@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
pandera = "^0.18.0"
pydantic = "^2.6.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"